src/main/java/org/example/hotel_service/errors/exception/BadRequestException.java
package org.example.hotel_service.errors.exception;

public class BadRequestException extends RuntimeException {
    public BadRequestException(String message) {
        super(message);
    }
}
